# Helpdesk-for-schools

./: .gitignore  Cargo.toml  DEVELOPER_README.md  README.md  tailwind.css
assets/css/: tailwind-output.css
assets/js/: header.js  sidebar.js
src/: app.rs  database.rs  main.rs
src/integrations/: fresh_service_ingest.rs  zabbix_ingest.rs
src/misc/fs/: notify.rs
src/public/: home.rs
templates/: home.html
