[package]
name = "helpdesk"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.14.0"
askama = "0.16.0"
awc = { version = "3.8.2", features = ["rustls"] }
base64 = "0.22.1"
chrono = "0.4.45"
derive_more = "2.1.1"
dotenvy = "0.15.7"
rodio = { version = "0.22.2", features = ["mp3"] }
serde_json = "1.0.150"
url = "2.5.8"
